fix table overlap

--- a/src/app/layout/components/layout/layout.component.scss
+++ b/src/app/layout/components/layout/layout.component.scss
@@ -1,7 +1,3 @@
-:host {
-  height: 100%;
-}
-
 .layout {
   height: 100%;
 
@@ -10,6 +6,7 @@
     left: 0;
     top: 0;
     width: 100%;
+    z-index: 3;
     box-shadow:
       0 3px 5px rgb(0 0 0 / 2%),
       0 0 2px rgb(0 0 0 / 5%),
